# pi-mono

./: .gitignore  README.md  pyproject.toml
src/pi_agent_core/: __init__.py  agent.py  agent_loop.py  event_stream.py  llm_client.py  proxy.py  types.py
src/pi_coding_agent/: __init__.py  agent_session.py  event_bus.py  session_manager.py
src/pi_coding_agent/tools/: __init__.py  bash.py  edit.py  find.py  grep.py  ls.py  path_utils.py  read.py  truncate.py  write.py
tests/: test_agent_core.py  test_tools.py  test_truncate.py
