[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-mono-python"
version = "0.1.0"
description = "Python rewrite of pi-agent-core and pi-coding-agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "anyio>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pi_agent_core", "src/pi_coding_agent"]

[tool.hatch.build.targets.sdist]
packages = ["src/pi_agent_core", "src/pi_coding_agent"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
